--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,13 @@ version: "3.8"
 
 services:
   api01: &api
-    build:
-      context: .
-      dockerfile: Dockerfile
-    network_mode: host
-    # image: skvggor/pankkivahva
+    image: skvggor/pankkivahva:latest
+    hostname: api01
     environment:
-      - DB_HOSTNAME=pankkivahva
+      - DB_HOSTNAME=db
       - PORT=3000
+    ports:
+      - "3000:3000"
     depends_on:
       - db
     deploy:
@@ -20,16 +19,16 @@ services:
 
   api02:
     <<: *api
-    network_mode: host
-    environment:
-      - DB_HOSTNAME=pankkivahva
-      - PORT=3001
+    hostname: api02
+    ports:
+      - "3001:3000"
 
   load-balancer:
     image: nginx:latest
-    network_mode: host
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    ports:
+      - "9999:9999"
     depends_on:
       - api01
       - api02
@@ -41,8 +40,7 @@ services:
 
   db:
     image: postgres:latest
-    hostname: pankkivahva
-    network_mode: host
+    hostname: db
     environment:
       - POSTGRES_PASSWORD=password
       - POSTGRES_USER=user
@@ -55,3 +53,8 @@ services:
         limits:
           cpus: "0.5"
           memory: "130MB"
+
+networks:
+  default:
+    driver: bridge
+    name: pankkivahva-nginx
